# SH

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile.prod  entrypoint.sh  pyproject.toml
backend/admin_api/: views.py
backend/applications/: tasks.py  views.py
backend/campus/: admin.py  models.py  serializers.py  urls.py  views.py
backend/config/: celery.py  settings.py  urls.py
backend/config/settings/: base.py  prod.py
backend/resources/: models.py  permissions.py
backend/users/: models.py
frontend/: Dockerfile  next.config.mjs  package.json  pnpm-lock.yaml
frontend/app/employer/analytics/: page.tsx
frontend/app/student/resumes/: page.tsx
frontend/contexts/: auth-context.tsx
frontend/lib/api/: employer.ts
frontend/lib/utils/: file-parser.ts
nginx/: nginx.prod.conf
